[tool.poetry]
name = "rlrp"
version = "0.1.0"
description = "Rocket League Replay Parser, used to convert rocket league replay files from binary format to json"
authors = ["blutomer"]

[tool.poetry.dependencies]
python = "^3.8"
bitstring = "^3.1.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
